--- a/contactos.html
+++ b/contactos.html
@@ -80,7 +80,7 @@
               <h2 class="maps-title">LOCALIZAÇÃO</h2>
               <div class="maps">
                 
-                  <div class="frame">     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d992.77278417097!2d12.240213488086527!3d-5.553506999747093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNcKwMzMnMTIuNiJTIDEywrAxNCcyNi43IkU!5e0!3m2!1spt-PT!2sao!4v1622146812239!5m2!1spt-PT!2sao" ></iframe>
+                  <div class="frame">    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.0742286345785!2d12.241477012491677!3d-5.556015422882356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a5dd3f7ff12601b%3A0xfe426e249085c408!2sISNTITUTO%20POLIT%C3%89CNICO%20DE%20CABINDA%20(ISPCAB!5e0!3m2!1spt-PT!2sao!4v1622741792206!5m2!1spt-PT!2sao"  allowfullscreen="" loading="lazy"></iframe>
                   </div>
                  </div>
             </div>
